<resources>
    <string name="app_name">shuafeia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_friend_list">FriendList</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="month_overview">FEB Overview</string>
    <string name="title_addtask">Add Task</string>
    <string name="title_addtask_post">Post</string>
    <string name="addTask_editTextTask_hint">Enter your task</string>
    <string name="addTask_editTextLimited_hint">Input</string>
    <string name="title_calender">calender</string>
    <string name="friend_name">friend_name</string>
    <string name="friend_s_profile">Friend\'s Profile</string>
    <string name="overview">Overview</string>

    <string name="add_task_textView_Limit_minue">Minue</string>
    <string name="add_task_textView_Limit_hour">Hour</string>
    <string name="add_task_textView_Limit">Limited</string>
    <string name="add_task_textView_Type">Type</string>
    <string name="add_task_textView_Remind">Remind</string>
    <string name="profile_default_number">00/00</string>
    <string name="friend_profile_toolbar">Friend\'s TimeLine</string>

    <string-array name="frindNameList">
        <item>Mr Meow</item>
        <item>Miss Shellow</item>
        <item>Mr Anyson</item>
        <item>Mr Mutang</item>
    </string-array>

    <array name="cat_images">
        <item>@drawable/cat11</item>
        <item>@drawable/cat22</item>
        <item>@drawable/cat33</item>
        <item>@drawable/cat44</item>
    </array>

    <string name="default_notification_channel_id">01</string>
</resources>
