<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_task">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize">


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_addtask"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/toolbar_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="23dp"
                android:text="@string/title_addtask_post"
                android:onClick="PostEvent"/>


        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/toolbar_top"
            android:layout_alignLeft="@+id/toolbar_top"
            android:layout_alignTop="@+id/toolbar_top"
            android:layout_alignEnd="@+id/toolbar_top"
            android:layout_alignRight="@+id/toolbar_top"
            android:layout_alignBottom="@+id/toolbar_top"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="348dp"
            android:layout_marginRight="348dp"
            android:layout_marginBottom="8dp"
            android:onClick="closeTab"
            app:srcCompat="@drawable/cancel" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FEF4EA">


        <TextView
            android:id="@+id/addTask_content_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:text="Task"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="23dp" />

        <EditText
            android:id="@+id/editText_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="23dp"
            android:ems="13"
            android:hint="@string/addTask_editTextTask_hint"
            android:inputType="textLongMessage"
            android:layout_marginEnd="23dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/addTask_content_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:text="Time"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="23dp" />

        <EditText
            android:id="@+id/Date_edittext"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="170dp"
            android:text="DATE"
            android:focusable="false"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginEnd="170dp" />

        <EditText
            android:id="@+id/Time_edittext"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="23dp"
            android:text="TIME"
            android:focusable="false"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginEnd="23dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FEF4EA">


        <TextView
            android:id="@+id/addTask_content_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:text="@string/add_task_textView_Remind"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="23dp" />

        <Switch
            android:id="@+id/addTask_content_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="255dp"
            android:layout_marginEnd="255dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/addTask_content_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:text="@string/add_task_textView_Type"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="23dp" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="115dp"
            android:layout_marginRight="130dp"
            android:layout_marginStart="115dp"
            android:layout_marginEnd="130dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FEF4EA"
        android:id="@+id/limited">

        <TextView
            android:id="@+id/addTask_content_limited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:text="@string/add_task_textView_Limit"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="23dp" />

        <EditText
            android:id="@+id/editText_Limit_hour"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="23dp"
            android:layout_toRightOf="@id/addTask_content_limited"
            android:layout_centerVertical="true"
            android:ems="13"
            android:hint="@string/addTask_editTextLimited_hint"
            android:inputType="number"
            android:layout_toEndOf="@id/addTask_content_limited"
            android:layout_marginStart="23dp" />

        <TextView
            android:id="@+id/addTask_content_limited_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/editText_Limit_hour"
            android:layout_marginLeft="5dp"
            android:text="@string/add_task_textView_Limit_hour"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_toEndOf="@id/editText_Limit_hour"
            android:layout_marginStart="5dp" />

        <EditText
            android:id="@+id/editText_Limit_minue"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/addTask_content_limited_hour"
            android:ems="13"
            android:hint="@string/addTask_editTextLimited_hint"
            android:inputType="number"
            android:layout_toEndOf="@id/addTask_content_limited_hour"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/addTask_content_limited_minue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/editText_Limit_minue"
            android:layout_marginLeft="5dp"
            android:text="@string/add_task_textView_Limit_minue"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_toEndOf="@id/editText_Limit_minue"
            android:layout_marginStart="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/addTask_content_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="23dp"
            android:visibility="invisible"
            android:text="Location"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginStart="23dp" />

        <Button
            android:id="@+id/addTask_button_location"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:layout_marginRight="170dp"
            android:text="定位"
            android:textColor="@android:color/black"
            android:layout_marginEnd="170dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
    </RelativeLayout>



</LinearLayout>
